# DynamoDB-Seeder-Tool

./: .gitignore  CMakeLists.txt  README.md
include/rapidjson/: schema.h
src/: main.cpp
src/utils/: SeederTool.cpp  SeederTool.h
